fixed - bug 5902: Long text overflow in infobox is not cut or wrapped. http://bugs.otrs.org/show_bug.cgi?id=5902

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Grid.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Grid.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.1 $
+ * @version     $Revision: 1.2 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -25,6 +25,10 @@
      * @note    force own Block Formatting Context for nested floats
      */
     overflow: hidden;
+}
+
+.LayoutFixedSidebar > .SidebarColumn {
+    overflow-x: hidden;
 }
 
 .LayoutFixedSidebar.SidebarLast > .SidebarColumn {
